Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67324

[Reg: Qt5.9.3 -> 5.9.4][Windows] Scene3DRenderer crash with offscreen rendering

XMLWordPrintable

    • 196d037239a6499e8b21dbbf35ef3d65765bcd6a in 5.9, 898c11d13a1af0c70fc8d5902bf3da210d6c2faf in 5.11

      02d01a68971747f01a270226f6474190736939cf https://codereview.qt-project.org/#/c/216201/ is causing regression in certain use cases when doing offscreen rendering.

      Steps to reproduce the issue.
      1. Run attached test application which is modified version from Qt example application rendercontrol
      2. Click on 'Reset' button

      Outcome:
      Application crashes with the attached backtrace.

      Notes:
      Crash occurs at least on Windows 10 64 bit with msvc2017.
      It doesn't reproduce on macOS or Linux.

        1. fullstack.txt
          51 kB
          Kimmo Leppälä
        2. QTBUG-67324.tar.gz
          9 kB
          Kimmo Leppälä
        3. simplestack.txt
          10 kB
          Kimmo Leppälä
        For Gerrit Dashboard: QTBUG-67324
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes