Scene3DRenderer: Do not call windowChanged lambda on destroyed object

By passing "this" as connect's third parameter we make sure that the
lambda in question is not called on destroyed objects.

Task-number: QTBUG-67324
Change-Id: I05c45b2ab7b4c81bbf462587515779cf4ef88232
Reviewed-by: Mike Krus <mike.krus@kdab.com>